--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lernstick-menu-xdg (12) lernstick-8; urgency=medium
+
+  * [e636b7] added gitignore file
+  * [59decd] use gtk-launch instead of kioclient when not running KDE
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Sun, 30 Aug 2015 16:44:52 +0200
+
 lernstick-menu-xdg (11) lernstick-8; urgency=medium
 
   * use zenity in GNOME
