--- a/debian/changelog
+++ b/debian/changelog
@@ -1,194 +1,5 @@
-lernstick-menu-xdg (12) lernstick-8; urgency=medium
-
-  * [e636b7] added gitignore file
-  * [59decd] use gtk-launch instead of kioclient when not running KDE
-
- -- Ronny Standtke <ronny.standtke@gmx.net>  Sun, 30 Aug 2015 16:44:52 +0200
-
-lernstick-menu-xdg (11) lernstick-8; urgency=medium
-
-  * use zenity in GNOME
-
- -- Ronny Standtke <ronny.standtke@gmx.net>  Sat, 29 Aug 2015 10:40:00 +0200
-
-lernstick-menu-xdg (10) lernstick-8; urgency=medium
-
-  * updated path to lernstickwelocme desktop file
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Sat, 11 Jul 2015 12:09:13 +0200
-
-lernstick-menu-xdg (9) lernstick-8; urgency=medium
-
-  * updated path to dlcopy desktop file
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Wed, 08 Jul 2015 20:00:51 +0200
-
-lernstick-menu-xdg (8) lernstick-8; urgency=medium
-
-  * added MATE keyboard layout configuration to autostart script
-
- -- Ronny Standtke <ronny.standtke@gmx.net>  Sun, 05 Jul 2015 15:55:39 +0200
-
-lernstick-menu-xdg (7) lernstick-8; urgency=medium
-
-  * added Cinnamon keyboard layout configuration to autostart script
-
- -- Ronny Standtke <ronny.standtke@gmx.net>  Sat, 04 Jul 2015 23:21:54 +0200
-
-lernstick-menu-xdg (6) lernstick-8; urgency=medium
-
-  * removed debug output
-
- -- Ronny Standtke <ronny.standtke@gmx.net>  Sat, 04 Jul 2015 14:46:32 +0200
-
-lernstick-menu-xdg (5) lernstick-8; urgency=medium
-
-  * added GNOME keyboard layout configuration to autostart script
-
- -- Ronny Standtke <ronny.standtke@gmx.net>  Sat, 04 Jul 2015 01:14:15 +0200
-
-lernstick-menu-xdg (4) lernstick-8; urgency=medium
-
-  * added menu to dependencies
-
- -- Ronny Standtke <ronny.standtke@gmx.net>  Thu, 11 Jun 2015 13:07:26 +0200
-
-lernstick-menu-xdg (3) lernstick-8; urgency=medium
-
-  * fixed naming of maintainer scripts
-
- -- Ronny Standtke <ronny.standtke@gmx.net>  Thu, 11 Jun 2015 09:50:02 +0200
-
-lernstick-menu-xdg (2) lernstick-8; urgency=medium
-
-  * synced with Debian 8
-
- -- Ronny Standtke <ronny.standtke@gmx.net>  Thu, 11 Jun 2015 09:31:54 +0200
-
-lernstick-menu-xdg-wheezy (1.17-1) unstable; urgency=low
-
-  * added autostart script to optionally lock KDE plasma applets config file
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Thu, 01 May 2014 19:22:09 +0200
-
-lernstick-menu-xdg-wheezy (1.16-1) unstable; urgency=low
-
-  * added autostart script to disable touchpad while typing
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Thu, 10 Apr 2014 15:21:34 +0200
-
-lernstick-menu-xdg-wheezy (1.15-1) unstable; urgency=low
-
-  * triple state for ShowWelcome in autostart script
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Mon, 10 Mar 2014 13:45:38 +0100
-
-lernstick-menu-xdg-wheezy (1.14-1) unstable; urgency=low
-
-  * configuration of dialog and dlcopy autostart in testmode
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Mon, 03 Mar 2014 14:08:03 +0100
-
-lernstick-menu-xdg-wheezy (1.13-1) unstable; urgency=low
-
-  * fix spelling in Lernstick desktop directory
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Mon, 03 Mar 2014 10:38:35 +0100
-
-lernstick-menu-xdg-wheezy (1.12-1) unstable; urgency=low
-
-  * fixed spelling in autostart files
-  * changed lernstickWelcome config file path
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Thu, 28 Nov 2013 16:10:24 +0100
-
-lernstick-menu-xdg-wheezy (1.11-1) unstable; urgency=low
-
-  * removed exam environment specific code (was a bad idea)
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Mon, 21 Oct 2013 10:24:18 +0200
-
-lernstick-menu-xdg-wheezy (1.10-1) unstable; urgency=low
-
-  * show info dialog about password change in exam environment
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Fri, 18 Oct 2013 13:15:44 +0200
-
-lernstick-menu-xdg-wheezy (1.9-1) unstable; urgency=low
-
-  * fix icon of card games category
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Fri, 06 Sep 2013 19:04:05 +0200
-
-lernstick-menu-xdg-wheezy (1.8-2) unstable; urgency=low
-
-  * remove old config file
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Fri, 06 Sep 2013 17:37:23 +0200
-
-lernstick-menu-xdg-wheezy (1.8-1) unstable; urgency=low
-
-  * divert xfce applications menu
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Fri, 06 Sep 2013 16:55:36 +0200
-
-lernstick-menu-xdg-wheezy (1.7-6) unstable; urgency=low
-
-  * fixed maintainer scripts
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Fri, 06 Sep 2013 15:48:52 +0200
-
-lernstick-menu-xdg-wheezy (1.7-2) unstable; urgency=low
-
-  * fixed migration from old version
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Fri, 06 Sep 2013 15:42:15 +0200
-
-lernstick-menu-xdg-wheezy (1.7-1) unstable; urgency=low
-
-  * cleanup of XFCE desktop directories
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Fri, 06 Sep 2013 15:34:56 +0200
-
-lernstick-menu-xdg-wheezy (1.6-1) unstable; urgency=low
-
-  * added classroom management category
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Fri, 06 Sep 2013 09:14:47 +0200
-
-lernstick-menu-xdg-wheezy (1.5-1) unstable; urgency=low
-
-  * fixed i18n/L10n
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Tue, 11 Jun 2013 10:32:10 +0200
-
-lernstick-menu-xdg-wheezy (1.4-1) unstable; urgency=low
-
-  * updated autostart script to support custom read-only info dialog visibility
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Mon, 10 Jun 2013 17:45:42 +0200
-
-lernstick-menu-xdg-wheezy (1.3-1) unstable; urgency=low
-
-  * always use kdialog as zenity is too broken to be usable :-/
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Wed, 24 Apr 2013 15:51:21 +0200
-
-lernstick-menu-xdg-wheezy (1.2-1) unstable; urgency=low
-
-  * use kdialog/zenity instead of lernstickTestModeInfo
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Wed, 24 Apr 2013 14:58:52 +0200
-
-lernstick-menu-xdg-wheezy (1.1-1) unstable; urgency=low
-
-  * use kioclient (new) instead of kfmclient (deprecated) for executing
-    *.desktop files
-
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Sun, 14 Apr 2013 15:03:05 +0200
-
-lernstick-menu-xdg-wheezy (1.0-1) unstable; urgency=low
+lernstick-menu-xdg-exam (1) lernstick-8; urgency=low
 
   * initial release
 
- -- Ronny Standtke <ronny.standtke@fhnw.ch>  Thu, 03 Jan 2013 18:03:31 +0100
+ -- Ronny Standtke <ronny.standtke@fhnw.ch>  Sun, 30 Aug 2015 16:51:11 +0200
