--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lernstick-menu-xdg-exam (3) lernstick-8; urgency=medium
+
+  * [50be79] fixed maintainer scripts
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Sun, 30 Aug 2015 17:47:33 +0200
+
 lernstick-menu-xdg-exam (2) lernstick-8; urgency=medium
 
   * [ca6289] fixed names of maintainer files
