--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lernstick-menu-xdg-exam (4) lernstick-8; urgency=medium
+
+  * [17f22f] use systemd for backup scripts
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Sun, 30 Aug 2015 23:21:16 +0200
+
 lernstick-menu-xdg-exam (3) lernstick-8; urgency=medium
 
   * [50be79] fixed maintainer scripts
