--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lernstick-menu-xdg-exam (6) lernstick-8; urgency=medium
+
+  * [e21ac3] no longer run lernstick-backup from systemd
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Mon, 31 Aug 2015 17:22:19 +0200
+
 lernstick-menu-xdg-exam (5) lernstick-8; urgency=medium
 
   * [1d8e21] updated gettext info
