--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lernstick-menu-xdg (13) lernstick-8; urgency=medium
+
+  * [f730fd] disable software upgrades when data partition is not writable
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Thu, 24 Sep 2015 16:04:17 +0200
+
 lernstick-menu-xdg (12) lernstick-8; urgency=medium
 
   * [e636b7] added gitignore file
