--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lernstick-menu-xdg-exam (8) lernstick-8; urgency=medium
+
+  * [23157a] added file system check and fallback strategies to backup script
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Sun, 28 Feb 2016 19:06:02 +0100
+
 lernstick-menu-xdg-exam (7) lernstick-8; urgency=medium
 
   * [7e6156] removed touchpad disabling autostart file (we now configure this in GNOME)
