--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lernstick-menu-xdg-exam (10) lernstick-8; urgency=medium
+
+  * [87e26e] added dependency to xtermn
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Sun, 28 Feb 2016 19:17:16 +0100
+
 lernstick-menu-xdg-exam (9) lernstick-8; urgency=medium
 
   * [e6385c] updated Germnan L10n
