--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lernstick-menu-xdg-exam (12) lernstick-8; urgency=medium
+
+  * [a2a8b9] updated German mo files
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Sun, 28 Feb 2016 19:26:44 +0100
+
 lernstick-menu-xdg-exam (11) lernstick-8; urgency=medium
 
   * [24108a] fixed if-statement
