updated debian changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lernstick-menu-xdg-exam (13) lernstick-8; urgency=medium
+
+  * [af4c6b] some fixes to file system checking and fallback stragegy in lernstick_backup
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Mon, 29 Feb 2016 08:29:56 +0100
+
 lernstick-menu-xdg-exam (12) lernstick-8; urgency=medium
 
   * [a2a8b9] updated German mo files
