--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lernstick-menu-xdg-exam (17) lernstick-8; urgency=medium
+
+  * [9790a3] fixed dconf call
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Sun, 12 Jun 2016 14:28:58 +0200
+
 lernstick-menu-xdg-exam (16) lernstick-8; urgency=medium
 
   * [0add66] added xdotool to dependencies
