--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lernstick-menu-xdg-exam (18) lernstick-8; urgency=medium
+
+  * [973662] skip virtualization detection as long as the password is not set
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Sun, 12 Jun 2016 14:45:17 +0200
+
 lernstick-menu-xdg-exam (17) lernstick-8; urgency=medium
 
   * [9790a3] fixed dconf call
