--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+lernstick-menu-xdg-exam (19) lernstick-8; urgency=medium
+
+  * [f730fd] disable software upgrades when data partition is not writable
+  * [b36898] call pkexec directly because gtk-launch fails starting the new
+    desktop files with the error message "Refusing to render service to dead
+    parents."
+  * [50bfaa] no longer show info about empty password (no longer needed after
+    switching to pkexec)
+  * [09b879] updated dependencies
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Sun, 12 Jun 2016 17:30:40 +0200
+
 lernstick-menu-xdg-exam (18) lernstick-8; urgency=medium
 
   * [973662] skip virtualization detection as long as the password is not set
