--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ lernstick-menu-xdg (15) lernstick-8; urgency=medium
 
   * [aee071] added systemd service to disable auto upgrades when no persistent
     storage media is found
+  * [d4d32d] removed disabling auto-upgrades from xdg-autostart file
 
- -- Ronny Standtke <ronny.standtke@gmx.net>  Wed, 06 Jul 2016 18:37:46 +0200
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Wed, 06 Jul 2016 18:41:37 +0200
 
 lernstick-menu-xdg (14) lernstick-8; urgency=medium
 
