--- a/po/de/lernstick_autostart.po
+++ b/po/de/lernstick_autostart.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-06-11 10:29+0200\n"
+"POT-Creation-Date: 2017-02-01 11:11+0100\n"
 "PO-Revision-Date: 2013-04-24 13:41+0200\n"
 "Last-Translator: Ronny Standtke <ronny.standtke@gmx.net>\n"
 "Language-Team: DE <DE@li.org>\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: usr/bin/lernstick_autostart:72
+#: usr/bin/lernstick_autostart:179
 msgid ""
 "The data partition is in <b>read-only mode</b>.<br><br>This means that all "
 "modifications you might have done previously<br>are visible but all "
@@ -33,7 +33,7 @@ msgstr ""
 "die Dateien auf der Austauschpartition oder einem anderen<br><b>externen "
 "Speichermedium</b> abspeichern.)"
 
-#: usr/bin/lernstick_autostart:81
+#: usr/bin/lernstick_autostart:195
 msgid ""
 "There is <b>no data partition in use</b>.<br><br>This means that all "
 "modifications you might have done previously<br>are now <b>invisible</b> and "
@@ -49,3 +49,17 @@ msgstr ""
 "herunterfahren.<br><br>(Wenn Sie jetzt Dateien bearbeiten und die Änderungen "
 "behalten wollen,<br>müssen Sie die Dateien auf der Austauschpartition oder "
 "einem anderen<br><b>externen Speichermedium</b> abspeichern.)"
+
+#: usr/bin/lernstick_autostart:214
+msgid ""
+"Welcome to your <b>exam</b>.<br><br>The exam has started now. As soon as you "
+"are done, please doubleclick the icon<br> at the desktop to finish the exam. "
+"Once the finish process is initiated you<br><b>cannot continue</b> with the "
+"exam. So, please make sure you completed your exam.<br><br><b>Good luck!</b>"
+msgstr ""
+"Willkommen zu Ihrer <b>Prüfung</b>.<br><br>Die Prüfung hat nun begonnen. "
+"Sobald Sie fertig sind, doppelklicken<br>Sie bitte das Icon auf dem "
+"Desktop, um Ihre Prüfung abzugeben. Wenn<br>der Abgabeprozesseinmal "
+"gestartet wurde, können Sie <b>nicht</b> mehr<br>weiterarbeiten. Bitte "
+"führen Sie die Abgabe erst aus, wenn Sie<br>fertig sind.<br><br><b>Viel Erfolg!"
+"</b>"
