--- a/messages.po
+++ b/messages.po
@@ -1,22 +1,46 @@
-# detect virtualization.
-# Copyright (C) 2016 THE lernstick-menu-xdg-exam's COPYRIGHT HOLDER
-# This file is distributed under the same license as the lernstick-menu-xdg-exam package.
-# Ronny Standtke <ronny.standtke@gmx.net>, 2016.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: detect_virtualization 0.9\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-06-11 21:45+0200\n"
-"PO-Revision-Date: 2016-06-11 21:45+0200\n"
-"Last-Translator: Ronny Standtke <ronny.standtke@gmx.net>\n"
-"Language-Team: DE <de@li.org>\n"
+"POT-Creation-Date: 2017-02-01 11:34+0100\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: usr/bin/detect_virtualization:19
-#, sh-format
-msgid "Virtualization (${VIRTUALIZATION}) detected\\nLogin required"
-msgstr "Virtualisierung (${VIRTUALIZATION}) erkannt\\nAnmeldung erforderlich"
+#: usr/bin/lernstick_autostart:179
+msgid ""
+"The data partition is in <b>read-only mode</b>.<br><br>This means that all "
+"modifications you might have done previously<br>are visible but all "
+"modifications you will do now are <b>lost</b><br>when you shut down or "
+"restart the system.<br><br>(If you now change files and want to keep them, "
+"you need to<br>save them on the exchange partition or other <b>external "
+"media</b>.)"
+msgstr ""
+
+#: usr/bin/lernstick_autostart:195
+msgid ""
+"There is <b>no data partition in use</b>.<br><br>This means that all "
+"modifications you might have done previously<br>are now <b>invisible</b> and "
+"all modifications you will do now are <b>lost</b><br>when you shut down or "
+"restart the system.<br><br>(If you now change files and want to keep them, "
+"you need to<br>save them on the exchange partition or other <b>external "
+"media</b>.)"
+msgstr ""
+
+#: usr/bin/lernstick_autostart:214
+msgid ""
+"Welcome to your <b>exam</b>.<br><br>The exam has started now. As soon as you "
+"are done, please doubleclick the icon<br> at the desktop to finish the exam. "
+"Once the finish process is initiated you<br><b>cannot continue</b> with the "
+"exam. So, please make sure you completed your exam.<br><br><b>Good luck!</b>"
+msgstr ""
