--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lernstick-menu-xdg (18) lernstick-8; urgency=medium
+
+  * [133e87] fixed live-auto-upgrades service file
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Thu, 09 Mar 2017 12:18:55 +0100
+
 lernstick-menu-xdg (17) lernstick-8; urgency=medium
 
   * [7b5eaf] fixed GNOME keyboard changes in autostart script
