--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lernstick-menu-xdg (23) lernstick-9; urgency=medium
+
+  * [4ea2f9] use new dlcopy.user script in lernstick_autostart
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Wed, 06 Dec 2017 17:24:55 +0100
+
 lernstick-menu-xdg (22) lernstick-9; urgency=medium
 
   * adapted icon paths to Debian 9
