--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lernstick-menu-xdg-exam (26) lernstick-9; urgency=medium
+
+  * [0e5d32] completed password logic in virtualization detection
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Fri, 08 Dec 2017 16:18:22 +0100
+
 lernstick-menu-xdg-exam (25) lernstick-9; urgency=medium
 
   * [31256c] adapted icon paths to Debian 9
