--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lernstick-menu-xdg-exam (34) lernstick-9; urgency=medium
+
+  * [179643] reformat exchange partition as last fallback strategy
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Wed, 21 Nov 2018 20:38:08 +0100
+
 lernstick-menu-xdg-exam (33) lernstick-9; urgency=medium
 
   * [2742db] also use ShowPasswordDialog field in /etc/lernstickWelcome to
