--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lernstick-menu-xdg-exam (40) lernstick-9; urgency=medium
+
+  * [ac01cb] use postfix "old" instead of "broken"
+             (because most of the times it is not really broken)
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Thu, 07 Feb 2019 11:04:11 +0100
+
 lernstick-menu-xdg-exam (39) lernstick-9; urgency=medium
 
   * [840c52] fixed packaging
