--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lernstick-menu-xdg-exam (45) lernstick-9; urgency=medium
+
+  * [b105f1] use hidden folder for screenshots
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Sat, 08 Jun 2019 11:05:19 +0200
+
 lernstick-menu-xdg-exam (44) lernstick-9; urgency=medium
 
   * [1923cf] store screenshots in backup source directory
