--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lernstick-menu-xdg-exam (56) lernstick-10; urgency=medium
+
+  * [0134e8] improved screen locking code once more
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Wed, 16 Oct 2019 22:17:12 +0200
+
 lernstick-menu-xdg-exam (55) lernstick-10; urgency=medium
 
   * [fbf2b0] added another safeguard against dbus errors when trying to lock screen
