--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lernstick-menu-xdg (32) lernstick-10; urgency=medium
+
+  * [bb9aff] updated Debian control file
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Mon, 13 Apr 2020 16:28:45 +0200
+
 lernstick-menu-xdg (31) lernstick-10; urgency=medium
 
   * [2cab7d] use zenity and run_desktop_file (both have been fixed in Debian 10)
