--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lernstick-menu-xdg (36) lernstick-11; urgency=medium
+
+  * [9e7d08] fixed lernstick_autostart for KDE Plasma in Debian 11
+
+ -- Ronny Standtke <ronny.standtke@gmx.net>  Sat, 01 May 2021 17:30:17 +0200
+
 lernstick-menu-xdg (35) lernstick-11; urgency=medium
 
   * [8f35f2] improved icon for lernstick-edu-music.directory
